--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#3b7a9e</color>
+    <color name="colorPrimaryDark">#27668a</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="darkblue">#b2c6da</color>
+    <color name="lightblue">#e8eff6</color>
 </resources>
