--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -7,10 +7,11 @@
     tools:context="com.geowahl.geowahl.MainActivity"
     android:orientation="horizontal">
 
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content">
     </ListView>
+
 </LinearLayout>
