--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -10,4 +10,10 @@
     app:roundLayout="@layout/round_activity_main"
     tools:context="com.geowahl.geowahl.MainActivity"
     tools:deviceIds="wear">
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.wearable.view.WatchViewStub>
+
