--- a/wear/src/main/res/layout/rect_activity_draw2.xml
+++ b/wear/src/main/res/layout/rect_activity_draw2.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/red"
-    android:id="@+id/linear"
-    tools:context="com.geowahl.geowahl.MainActivity"
+    android:id="@+id/rect"
+    tools:context="com.geowahl.geowahl.DrawActivity"
     tools:deviceIds="wear_square">
 
     <TextView
@@ -14,8 +13,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_square" />
-    <FrameLayout
-        android:id="@+id/fragment_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
-</LinearLayout>
+</RelativeLayout>
