--- a/wear/src/main/res/layout/round_draw_activty.xml
+++ b/wear/src/main/res/layout/round_draw_activty.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/rect"
-    tools:deviceIds="wear_square">
+    tools:context="com.geowahl.geowahl.DrawActivty"
+    tools:deviceIds="wear_round">
 
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_square" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/hello_round" />
 </RelativeLayout>
