--- a/wear/src/main/res/layout/rect_activity_main.xml
+++ b/wear/src/main/res/layout/rect_activity_main.xml
@@ -14,6 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_square" />
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="new Activity"
+        android:onClick="onClick"/>
+
     <FrameLayout
         android:id="@+id/fragment_frame"
         android:layout_width="match_parent"
