--- a/wear/src/main/res/layout/rect_draw_activty.xml
+++ b/wear/src/main/res/layout/rect_draw_activty.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/rect"
+    tools:context="com.geowahl.geowahl.DrawActivty"
     tools:deviceIds="wear_square">
 
     <TextView
@@ -12,4 +12,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_square" />
-</RelativeLayout>
+</LinearLayout>
