--- a/mobile/src/main/res/layout/activity_state.xml
+++ b/mobile/src/main/res/layout/activity_state.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".State">
 
-   <View
-       android:layout_width="50dp"
-       android:layout_height="50dp"
-       android:layout_gravity="center"
-       android:layout_marginTop="50dp"
-       android:id="@+id/colorView">
-   </View>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/location"
+        android:id="@+id/location"
+        android:layout_gravity="center_horizontal" />
 
     <ListView
         android:id="@+id/listView"
