wear: donut chart                                             mobile: ListView for elections, sending slug

--- a/wear/src/main/res/layout/activity_splashscreen.xml
+++ b/wear/src/main/res/layout/activity_splashscreen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:textSize="40dp"
         android:textColor="#fff"
-        android:text="GEOWahl" />
+        android:text="GEOWahl"
+        android:gravity="center"/>
 
-</RelativeLayout>
+</LinearLayout>
