mobile: Manifest: Splashscreen, Mainactivity nicht mehr launch activtiy State, District, Webview: onOptionItemSelected
wear:
Manifest: Splashscreen, Main nicht mehr launch activity

--- a/mobile/src/main/res/layout/activity_listview.xml
+++ b/mobile/src/main/res/layout/activity_listview.xml
@@ -8,5 +8,6 @@
     android:padding="10dip"
     android:textSize="16dip"
     android:textStyle="bold"
+    android:textColor="@color/colorPrimary"
     android:background="@color/lightblue">
 </TextView>
