--- a/wear/src/main/res/layout/activity_splashscreen.xml
+++ b/wear/src/main/res/layout/activity_splashscreen.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.wearable.view.WatchViewStub
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/watch_view_stub"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/darkblue">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="40dp"
-        android:textColor="#fff"
-        android:text="GEOWahl"
-        android:gravity="center"/>
-
-</LinearLayout>
+    app:rectLayout="@layout/rect_splashscreen"
+    app:roundLayout="@layout/round_splashscreen"
+    tools:context="com.geowahl.geowahl.Splashscreen"
+    tools:deviceIds="wear">
+</android.support.wearable.view.WatchViewStub>
